refactor: move group participants logic to GroupParticipantService